# check-cli

./: .buildinfo  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  README.md  cleanup.bat  cli.sln  code.html  deps.html  exit_codes.html  genindex.html  global_flags.html  go.mod  go.sum  index.html  main.go  mcp_client.html  mcp_server.html  objects.inv  os.html  resource.rc  search.html  searchindex.js  speed.html  ssl.html  version.html
.doctrees/: code.doctree  deps.doctree  environment.pickle  exit_codes.doctree  global_flags.doctree  index.doctree  mcp_client.doctree  mcp_server.doctree  os.doctree  speed.doctree  ssl.doctree  version.doctree
.github/: update-readme-download.js
.github/workflows/: build.yml  docs.yml  main.yml
_sources/: deps.rst.txt  exit_codes.rst.txt  index.rst.txt  mcp_client.rst.txt  mcp_server.rst.txt  os.rst.txt  speed.rst.txt  ssl.rst.txt  version.rst.txt
checks/: check.go  deps.go  speed.go  ssl.go  utils.go  version.go
checks/auth/: login.go  logout.go
checks/code/: deps.go  loc.go
checks/dependencies/samples/: NuGet.config  Sample.csproj  check_deps_output.json  cli.sln  go.mod  package-lock.json  package.json  packages.config  pom.xml  project.csproj  project.json  pyproject.toml  requirements.txt
cmd/: main.go
docs/: Makefile  build_docs.py  code.rst  conf.py  deps.rst  generate_version_picker.py  global_flags.rst  index.rst  make.bat  mcp_client.rst  mcp_server.rst  os.rst  requirements.txt  speed.rst  ssl.rst  version.rst  versions.yaml
master/: .buildinfo  deps.html  exit_codes.html  searchindex.js  version.html
(+36 files in other folders)
