[project]
name = "demo-app"
version = "1.0.0"
description = "Demo Python application with various dependencies"
authors = [
    {name = "Example Author", email = "author@example.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy~=2.0.23",
    "alembic>=1.12.1",
    "pydantic==2.5.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart==0.0.18",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "celery>=5.3.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"] 